
2004-06-04	Florian Boor  	<florian.boor@kernelconcepts.de>
	* Makefile: some minor build fixes.
	* battery.c: Fixed platform dependency.
	* cardinfo.c: Fixed incuding of pcmcia headers.

2004-06-03	Florian Boor  	<florian.boor@kernelconcepts.de>
	* Makefile, brightness.c: Some more changes to become more independent from 
	  hardware platform.
	* Makefile: Several changes to to make it compatible with OE.

2004-06-02	Florian Boor  	<florian.boor@kernelconcepts.de>
	* Makefile, main.c: Disabled obsolete appmgr stuff.
	* info-main.c: removed debug output.
	* Released V 0.1.8

2004-05-27	Florian Boor  	<florian.boor@kernelconcepts.de>
	* Makefile, control1: Removed obsolete libdotdesktop stuff.

2004-05-24	Florian Boor  	<florian.boor@kernelconcepts.de>
	* theme.c: New setting: toolbar style via xsettings.

2004-03-27	Florian Boor  	<florian.boor@kernelconcepts.de>
	* ownerinfo.c, login-setup.c: Removed markup from string, fixes bug #1187.
	* gpe-conf-users.desktop.in: Removed trailing spaces, fixes bug #1189.

2004-03-19	Florian Boor  	<florian.boor@kernelconcepts.de>
	* login-setup.*: Fixed segfault, fixed warning.
	* Makefile: Fixed debug builds.
	
2004-03-15	Florian Boor  	<florian.boor@kernelconcepts.de>
	* keyctl.c: Fixed path to icon. 
	
2004-03-05	Florian Boor  	<florian.boor@kernelconcepts.de>
	* Makefile: Removed obsolete IPAQ_INCLUDES.

2004-03-02	Florian Boor  	<florian.boor@kernelconcepts.de>
	* keyctl.c: We restart keylaunch now, this applies changes instantly.
	* keyctl.c: Moved init of edit field to fix #1169.
	* network.c: Improved handling of deleted interfaces. Fixes #1153.
	* Removed obsolete generated .desktop files from cvs.
	* main.c: Removed loading of obsolete icons.
	* cardinfo.c: Fixed bug caused loading unused icon.
	* control: Changed dependency to newer version of libgpewidget.
	* Released V 0.1.6
	
2004-02-18	Florian Boor  	<florian.boor@kernelconcepts.de>
	* battery.c, Makefile: Battery status shows learning status now.