@@ -1,1 +1,6 @@
 gpe-conf
+gpe-info
+*.pc
+*.d
+*.desktop
+
